<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_login"
        layout="@layout/toolbar_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/user_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:hint="@string/loginscreen_password_field"
            android:inputType="textPassword"
            android:layout_below="@+id/user_login_username"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_login_username"
            android:textAlignment="center"
            android:hint="@string/loginscreen_username_field"
            android:layout_marginTop="43dp"
            android:layout_below="@+id/user_login_headertext"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/user_login_password"
            android:layout_alignEnd="@+id/user_login_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/loginscreen_header"
            android:padding="10dp"
            android:id="@+id/user_login_headertext"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_login_password"
            android:padding="5dp"
            android:weightSum="10"
            android:id="@+id/linearLayout3">

            <Button
                android:id="@+id/user_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/loginscreen_button_register"/>

            <Button
                android:id="@+id/user_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/loginscreen_button_login"/>

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginscreen_checkbox"
            android:id="@+id/user_login_checkBox"
            android:layout_marginEnd="43dp"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>