<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_login"
        layout="@layout/toolbar_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/user_register_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/registerscreen_firstname"
            android:layout_below="@+id/user_register_headertext"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_register_lastname"
            android:textAlignment="center"
            android:hint="@string/registerscreen_lastname"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/user_register_firstname"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/user_register_firstname"
            android:layout_alignEnd="@+id/user_register_firstname" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_register_email"
            android:textAlignment="center"
            android:hint="@string/registerscreen_email"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/user_register_lastname"
            android:layout_centerVertical="true"
            android:inputType="textEmailAddress"
            android:layout_alignStart="@+id/user_register_firstname"
            android:layout_alignEnd="@+id/user_register_firstname" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_register_username"
            android:textAlignment="center"
            android:hint="@string/registerscreen_username"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/user_register_email"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/user_register_firstname"
            android:layout_alignEnd="@+id/user_register_firstname" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_register_password"
            android:textAlignment="center"
            android:hint="@string/registerscreen_password"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/user_register_username"
            android:layout_centerVertical="true"
            android:inputType="textPassword"
            android:layout_alignStart="@+id/user_register_firstname"
            android:layout_alignEnd="@+id/user_register_firstname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registerscreen_header"
            android:padding="10dp"
            android:id="@+id/user_register_headertext"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@id/user_register_password"
            android:padding="5dp">

            <Button
                android:id="@+id/register_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/registerscreen_button_register"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>