<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_login"
        layout="@layout/toolbar_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_change_password_2"
            android:textAlignment="center"
            android:hint="@string/passwordscreen_password2"
            android:inputType="textPassword"
            android:layout_below="@+id/user_change_password_1"
            android:layout_alignStart="@+id/user_change_password_1" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_change_password_1"
            android:textAlignment="center"
            android:hint="@string/passwordscreen_password1"
            android:inputType="textPassword"
            android:layout_below="@+id/user_password_headertext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/passwordscreen_header"
            android:padding="10dp"
            android:id="@+id/user_password_headertext"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/password_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/passwordscreen_button_change"
            android:layout_below="@+id/user_change_password_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>

    </RelativeLayout>

</LinearLayout>