<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffdab5">

    <!-- The main content view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- The main content view -->

        <include
            android:id="@+id/toolbar_post"
            layout="@layout/toolbar_post" />

        <ListView
            android:id="@+id/main_post_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar_post"></ListView>

        <LinearLayout
            android:id="@+id/answer_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:layout_alignParentBottom="true"
            android:weightSum="100">

            <EditText
                android:id="@+id/answer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="75"
                android:background="#ffffff"
                android:hint="@string/postscreen_write_post_field"
                android:textAlignment="center" />

            <Button
                android:id="@+id/send_answer_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:hint="@string/postscreen_button_send" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#ffffff"
        android:choiceMode="singleChoice"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/stock_slide_companyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:text="FingerPrint Cards AB"
                android:textColor="#fafafa"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/stock_slide_companyname"
                android:layout_centerInParent="true"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/stock_slide_stockname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="FING-B.ST"
                    android:textColor="#fafafa"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/stock_slide_info_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/stock_slide_stockname"
                    android:text="+24%"
                    android:textColor="#fafafa"
                    android:textSize="20sp" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/relativeLayout">

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_weight="0.50">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/stockslide_marketvalue"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/linearLayout1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/stockslide_currency"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/linearLayout2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/stockslide_askprice"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/linearLayout3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/stockslide_bidprice"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/linearLayout4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/stockslide_daylow"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/linearLayout5"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/stockslide_dayhigh"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/linearLayout6"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/stockslide_revenue"
                        android:textSize="25sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_toRightOf="@id/relativeLayout2"
                android:layout_weight="0.50">

                <LinearLayout
                    android:id="@+id/linearLayout11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp">

                    <TextView
                        android:id="@+id/stock_slide_info_marketvalue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="48 Biljoner"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout11"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/stock_slide_info_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="48 Biljoner"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout22"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/stock_slide_info_askprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="48 Biljoner"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout33"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/stock_slide_info_bidprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="48 Biljoner"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout55"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout44"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">


                    <TextView
                        android:id="@+id/stock_slide_info_daylow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="48 Biljoner"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout66"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout55"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/stock_slide_info_dayhigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="48 Biljoner"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout77"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout66"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/stock_slide_info_revenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="48 Biljoner"
                        android:textSize="25sp" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>